--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,9 @@ classifiers = [
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "hydra-core>=1.3.2",
     "numpy>=2.2.1",
+    "pytorch-lightning>=2.5.0.post0",
     "torch>=2.5.1",
 ]
 
