Added wandb, lightning and hydra among others to the requirements.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,27 @@
-torch>=2.2.2
-numpy>=1.21.2
-typer==0.4.0
+aiohappyeyeballs==2.4.4
+aiohttp==3.11.11
+aiosignal==1.3.2
+annotated-types==0.7.0
+antlr4-python3-runtime==4.9.3
+attrs==24.3.0
+certifi==2024.12.14
+charset-normalizer==3.4.1
+click==8.1.8
+docker-pycreds==0.4.0
 filelock==3.16.1
+frozenlist==1.5.0
 fsspec==2024.12.0
+gitdb==4.0.12
+gitpython==3.1.44
+hydra-core==1.3.2
+idna==3.10
 jinja2==3.1.5
+lightning-utilities==0.11.9
+markdown-it-py==3.0.0
 markupsafe==3.0.2
+mdurl==0.1.2
 mpmath==1.3.0
+multidict==6.1.0
 networkx==3.4.2
 numpy==2.2.1
 nvidia-cublas-cu12==12.4.5.8
@@ -20,8 +36,34 @@ nvidia-cusparse-cu12==12.3.1.170
 nvidia-nccl-cu12==2.21.5
 nvidia-nvjitlink-cu12==12.4.127
 nvidia-nvtx-cu12==12.4.127
+omegaconf==2.3.0
+packaging==24.2
+platformdirs==4.3.6
+propcache==0.2.1
+protobuf==5.29.3
+psutil==6.1.1
+pydantic==2.10.5
+pydantic-core==2.27.2
+pygments==2.19.1
+pyparsing==3.2.1
+pytorch-lightning==2.5.0.post0
+pyyaml==6.0.2
+requests==2.32.3
+rich==13.9.4
+sentry-sdk==2.20.0
+setproctitle==1.3.4
 setuptools==75.8.0
+shellingham==1.5.4
+six==1.17.0
+smmap==5.0.2
 sympy==1.13.1
 torch==2.5.1
+torch-geometric==2.6.1
+torchmetrics==1.6.1
+tqdm==4.67.1
 triton==3.1.0
+typer==0.15.1
 typing-extensions==4.12.2
+urllib3==2.3.0
+wandb==0.19.3
+yarl==1.18.3
