--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,9 @@ dependencies = [
     "numpy>=2.2.1",
     "pytorch-lightning>=2.5.0.post0",
     "torch>=2.5.1",
+    "torch-geometric>=2.6.1",
+    "typer>=0.15.1",
+    "wandb>=0.19.3",
 ]
 
 [tool.ruff]
@@ -29,3 +32,9 @@ line-length = 120
 
 [tool.coverage.run]
 omit = ["tests/*"]
+
+[dependency-groups]
+dev = [
+    "coverage>=7.6.10",
+    "pytest>=8.3.4",
+]
