--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ classifiers = [
   "Programming Language :: Python :: 3",
 ]
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = "==3.12"
 dependencies = [
     "hydra-core>=1.3.2",
     "numpy>=2.2.1",
