--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,9 @@ readme = "README.md"
 requires-python = "==3.12.*"
 dependencies = [
     "hydra-core>=1.3.2",
+    "invoke>=2.2.0",
     "numpy>=2.2.1",
+    "python-dotenv>=1.0.1",
     "pytorch-lightning>=2.5.0.post0",
     "torch>=2.5.1",
     "torch-geometric>=2.6.1",
