added service account key to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -193,3 +193,6 @@ models/model.pt
 /config.local
 /tmp
 /cache
+
+# ignore dtumlops-448012-37e77e52cd8f.json (GCP service account key)
+dtumlops-448012-37e77e52cd8f.json
