--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -8,6 +8,13 @@ on:
     branches:
       - main
 
+# Github secrets
+- uses: iterative/setup-dvc@v1
+- name: Get data
+  run: dvc pull
+  env:
+    GDRIVE_CREDENTIALS_DATA: ${{ secrets.GDRIVE_CREDENTIALS_DATA }}
+  
 jobs:
   test:
     runs-on: ${{ matrix.operating-system }}
