--- a/.gitignore
+++ b/.gitignore
@@ -196,3 +196,4 @@ models/model.pt
 
 # ignore dtumlops-448012-37e77e52cd8f.json (GCP service account key)
 dtumlops-448012-37e77e52cd8f.json
+dtumlops-448012-f2134e26466c.json
