--- a/cloud/cloudbuild.yaml
+++ b/cloud/cloudbuild.yaml
@@ -1,8 +1,4 @@
 
-# replact: 
-# - <image-name> with the name of the image you want to build
-# - <path-to-dockerfile> with the path to the Dockerfile
-
 steps:
 - name: 'gcr.io/cloud-builders/docker'
   id: 'Build container image'
@@ -10,18 +6,19 @@ steps:
     'build',
     '.',
     '-t',
-    'europe-west1-docker.pkg.dev/$PROJECT_ID/mlops-proj-group3-artifact/<image-name>',
+    'europe-west1-docker.pkg.dev/$PROJECT_ID/mlops-proj-group3-artifact/train-image',
     '-f',
-    '<path-to-dockerfile>'
+    'dockerfiles/train.dockerfile'
   ]
 - name: 'gcr.io/cloud-builders/docker'
   id: 'Push container image'
   args: [
     'push',
-    'europe-west1-docker.pkg.dev/$PROJECT_ID/mlops-proj-group3-artifact/<image-name>'
+    'europe-west1-docker.pkg.dev/$PROJECT_ID/mlops-proj-group3-artifact/train-image'
   ]
 options:
   logging: CLOUD_LOGGING_ONLY
-
+serviceAccount: 'projects/$PROJECT_ID/serviceAccounts/mlops-proj-group3-build-servic@dtumlops-448012.iam.gserviceaccount.com'
 
 # trigger image build with writing this in the terminal: gcloud builds submit --config=cloudbuild.yaml .
+# Authenticate access with service account: gcloud auth activate-service-account --key-file=cloud/dtumlops-448012-f2134e26466c.json 
