--- a/cloud/cloudbuild.yaml
+++ b/cloud/cloudbuild.yaml
@@ -19,6 +19,12 @@ steps:
 options:
   logging: CLOUD_LOGGING_ONLY
 serviceAccount: 'projects/$PROJECT_ID/serviceAccounts/mlops-proj-group3-build-servic@dtumlops-448012.iam.gserviceaccount.com'
+secretEnv: ['WANDB_API_KEY']
+
+availableSecrets:
+  secretManager:
+  - versionName: "projects/$PROJECT_ID/secrets/WANDB_API_KEY/versions/latest"
+    env: "WANDB_API_KEY"
 
 # trigger image build with writing this in the terminal: gcloud builds submit --config=cloudbuild.yaml .
 # Authenticate access with service account: gcloud auth activate-service-account --key-file=cloud/dtumlops-448012-f2134e26466c.json 
