--- a/cloud/cloudbuild.yaml
+++ b/cloud/cloudbuild.yaml
@@ -10,9 +10,8 @@ steps:
     '-f',
     'dockerfiles/train.dockerfile'
   ]  
-  env: 
-    - 'PROJECT_ID=$PROJECT_ID'
-    - 'WANDB_API_KEY=$WANDB_API_KEY'
+  secretEnv: ['WANDB_API_KEY']
+
 
 - name: 'gcr.io/cloud-builders/docker'
   id: 'Push container image'
@@ -25,12 +24,13 @@ options:
   logging: CLOUD_LOGGING_ONLY
 serviceAccount: 'projects/$PROJECT_ID/serviceAccounts/mlops-proj-group3-build-servic@dtumlops-448012.iam.gserviceaccount.com'
 
-# secretEnv: ['WANDB_API_KEY']
 
 availableSecrets:
   secretManager:
   - versionName: "projects/$PROJECT_ID/secrets/WANDB_API_KEY/versions/latest"
+    # secretEnv: "WANDB_API_KEY"
     env: "WANDB_API_KEY"
 
 # Trigger image build with writing this in the terminal: gcloud builds submit --config=cloudbuild.yaml .   
 # Authenticate access with service account: gcloud auth activate-service-account --key-file=cloud/dtumlops-448012-f2134e26466c.json 
+
