--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -9,11 +9,11 @@ on:
       - main
 
 # Github secrets
-- uses: iterative/setup-dvc@v1
-- name: Get data
-  run: dvc pull
-  env:
-    GDRIVE_CREDENTIALS_DATA: ${{ secrets.GDRIVE_CREDENTIALS_DATA }}
+# - uses: iterative/setup-dvc@v1
+# - name: Get data
+#   run: dvc pull
+#   env:
+#     GDRIVE_CREDENTIALS_DATA: ${{ secrets.GDRIVE_CREDENTIALS_DATA }}
   
 jobs:
   test:
@@ -21,6 +21,7 @@ jobs:
     strategy:
       matrix:
         operating-system: ["ubuntu-latest", "macos-latest"]
+        python-version: ["3.11", "3.12"]
 
     steps:
       - name: Checkout code
@@ -32,7 +33,7 @@ jobs:
       - name: "Set up Python"
         uses: actions/setup-python@v5
         with:
-          python-version-file: "pyproject.toml"
+          python-version-file: ${{ matrix.python-version }}
 
       - name: Install the project
         run: uv sync --all-extras --dev
