--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ classifiers = [
 readme = "README.md"
 requires-python = "==3.12.*"
 dependencies = [
+    "gcloud>=0.18.3",
+    "google-cloud>=0.34.0",
     "hydra-core>=1.3.2",
     "invoke>=2.2.0",
     "numpy>=2.2.1",
@@ -39,4 +41,5 @@ omit = ["tests/*"]
 dev = [
     "coverage>=7.6.10",
     "pytest>=8.3.4",
+    "ruff>=0.9.2",
 ]
