--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ jinja2==3.1.5
 lightning-utilities==0.11.9
 markdown-it-py==3.0.0
 markupsafe==3.0.2
+matplotlib>=3.10.0
 mdurl==0.1.2
 mpmath==1.3.0
 multidict==6.1.0
