--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ requires-python = "==3.12.*"
 dependencies = [
     "gcloud>=0.18.3",
     "google-cloud>=0.34.0",
+    "google-cloud-storage>=2.19.0",
     "hydra-core>=1.3.2",
     "invoke>=2.2.0",
     "numpy>=2.2.1",
