--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ omit = ["tests/*"]
 [dependency-groups]
 dev = [
     "coverage>=7.6.10",
+    "pre-commit>=4.0.1",
     "pytest>=8.3.4",
     "ruff>=0.9.2",
 ]
