added test stuff

--- a/.gitignore
+++ b/.gitignore
@@ -197,3 +197,4 @@ models/model.pt
 # ignore GCP service account keys
 dtumlops-448012-37e77e52cd8f.json
 dtumlops-448012-f2134e26466c.json
+dtumlops-448012-e5cfd43b6fd8.json
