--- a/cloud/cloudbuild.yaml
+++ b/cloud/cloudbuild.yaml
@@ -1,14 +1,34 @@
 
 steps:
+# - name: 'gcr.io/cloud-builders/docker'
+#   id: 'Build container image'
+#   args: [
+#     'build',
+#     '.',
+#     '-t',
+#     'europe-west1-docker.pkg.dev/$PROJECT_ID/mlops-proj-group3-artifact/train-image',
+#     '-f',
+#     'dockerfiles/train.dockerfile'
+#   ]  
+#   secretEnv: ['WANDB_API_KEY']
+
+
+# - name: 'gcr.io/cloud-builders/docker'
+#   id: 'Push container image'
+#   args: [
+#     'push',
+#     'europe-west1-docker.pkg.dev/$PROJECT_ID/mlops-proj-group3-artifact/train-image'
+#   ]
+
 - name: 'gcr.io/cloud-builders/docker'
   id: 'Build container image'
   args: [
     'build',
     '.',
     '-t',
-    'europe-west1-docker.pkg.dev/$PROJECT_ID/mlops-proj-group3-artifact/train-image',
+    'europe-west1-docker.pkg.dev/$PROJECT_ID/mlops-proj-group3-artifact/test-image',
     '-f',
-    'dockerfiles/train.dockerfile'
+    'dockerfiles/test.dockerfile'
   ]  
   secretEnv: ['WANDB_API_KEY']
 
@@ -17,7 +37,7 @@ steps:
   id: 'Push container image'
   args: [
     'push',
-    'europe-west1-docker.pkg.dev/$PROJECT_ID/mlops-proj-group3-artifact/train-image'
+    'europe-west1-docker.pkg.dev/$PROJECT_ID/mlops-proj-group3-artifact/test-image'
   ]
 
 options:
