Update model handling and configuration for improved training accuracy and logging. Added a check so we dont override best model unless the val acc is better

--- a/configs/sweep/sweep.yaml
+++ b/configs/sweep/sweep.yaml
@@ -13,7 +13,7 @@ parameters:
     optimizer-name:
       values: ['Adam', 'AdamW', 'NAdam', 'RMSprop']
     num-epochs:
-        values: [100, 200]
+        values: [300]
     weight-decay:
         values: [0.0001]
     dropout:
