--- a/.gitignore
+++ b/.gitignore
@@ -199,3 +199,4 @@ checkpoints/
 dtumlops-448012-37e77e52cd8f.json
 dtumlops-448012-f2134e26466c.json
 dtumlops-448012-e5cfd43b6fd8.json
+dtumlops-448012-3165f3b92003.json
