--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ dependencies = [
     "torch>=2.5.1",
     "torch-geometric>=2.6.1",
     "typer>=0.15.1",
+    "uvicorn>=0.34.0",
     "wandb>=0.19.3",
 ]
 
