--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,8 @@ omit = ["tests/*"]
 [dependency-groups]
 dev = [
     "coverage>=7.6.10",
+    "loguru>=0.7.3",
+    "markdown>=3.7",
     "pre-commit>=4.0.1",
     "pytest>=8.3.4",
     "ruff>=0.9.2",
