--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,12 +18,14 @@ classifiers = [
 readme = "README.md"
 requires-python = "==3.12.*"
 dependencies = [
+    "evidently>=0.4.36",
     "fastapi>=0.115.6",
     "gcloud>=0.18.3",
     "google-cloud>=0.34.0",
     "google-cloud-aiplatform>=1.78.0",
     "google-cloud-secret-manager>=2.22.1",
     "google-cloud-storage>=2.19.0",
+    "httpx>=0.28.1",
     "hydra-core>=1.3.2",
     "invoke>=2.2.0",
     "numpy>=2.2.1",
