Fix coverage report step in CI workflow by removing redundant command

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -50,6 +50,4 @@ jobs:
         run: uv run src/wikipedia/dataset_statistics.py
 
       - name: Coverage report
-        run: |
-        uv add coverage
-        uv run coverage report
+        run: uv run coverage report
