--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -21,7 +21,7 @@ jobs:
     strategy:
       matrix:
         operating-system: ["ubuntu-latest", "macos-latest"]
-        python-version: "3.12"
+        python-version: ['3.12']
 
     steps:
       - name: Checkout code
