--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -38,7 +38,23 @@ jobs:
       - name: Install the project
         run: uv sync --all-extras --dev
 
+      # **Authenticate with Google Cloud**
+      - name: Authenticate to Google Cloud
+        uses: google-github-actions/auth@v1
+        with:
+          credentials_json: '${{ secrets.GDRIVE_CREDENTIALS_DATA }}'
+
+      # **Set Google Cloud Project (Optional)**
+      - name: Set Google Cloud Project
+        run: |
+          gcloud config set project dtumlops-448012
+        env:
+          GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GDRIVE_CREDENTIALS_DATA }}
+
+
       - name: Run tests
+        env:
+          GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GDRIVE_CREDENTIALS_DATA }}
         run: uv run pytest tests
 
       - name: Enable caching
@@ -47,7 +63,11 @@ jobs:
           enable-cache: true
 
       - name: Check data statistics
+        env:
+          GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GDRIVE_CREDENTIALS_DATA }}
         run: uv run src/wikipedia/dataset_statistics.py
 
       - name: Coverage report
+        env:
+          GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GDRIVE_CREDENTIALS_DATA }}
         run: uv run coverage report
