--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -65,8 +65,8 @@ jobs:
         with:
           enable-cache: true
 
-      - name: Check data statistics
-        run: uv run src/wikipedia/dataset_statistics.py
+      # - name: Check data statistics
+      #   run: uv run src/wikipedia/dataset_statistics.py
 
       - name: Coverage report
         run: uv run coverage report
