--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -58,7 +58,7 @@ jobs:
         run: uv sync --all-extras --dev
 
       - name: Run tests
-        run: uv run pytest tests
+        run: uv run pytest tests --cov=src --cov-report=xml
 
       - name: Enable caching
         uses: astral-sh/setup-uv@v5
@@ -69,4 +69,4 @@ jobs:
       #   run: uv run src/wikipedia/dataset_statistics.py
 
       - name: Coverage report
-        run: uv run coverage report
+        run: uv run coverage report # --fail-under=80
