--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [
     "invoke>=2.2.0",
     "matplotlib>=3.10.0",
     "numpy>=2.2.1",
+    "pytest-cov>=6.0.0",
     "python-dotenv>=1.0.1",
     "pytorch-lightning>=2.5.0.post0",
     "torch>=2.5.1",
