Working data drift

--- a/.gitignore
+++ b/.gitignore
@@ -202,3 +202,6 @@ dtumlops-448012-f2134e26466c.json
 dtumlops-448012-e5cfd43b6fd8.json
 dtumlops-448012-3165f3b92003.json
 dtumlops-448012-cd176bb4d550.json
+
+
+my_datadrit_report.json
