--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,6 @@ classifiers = [
 readme = "README.md"
 requires-python = "==3.12.*"
 dependencies = [
-    "evidently>=0.4.36",
     "fastapi>=0.115.6",
     "gcloud>=0.18.3",
     "google-cloud>=0.34.0",
@@ -29,6 +28,7 @@ dependencies = [
     "hydra-core>=1.3.2",
     "invoke>=2.2.0",
     "numpy>=2.2.1",
+    "pandas>=2.2.3",
     "python-dotenv>=1.0.1",
     "pytorch-lightning>=2.5.0.post0",
     "torch>=2.5.1",
@@ -48,6 +48,9 @@ omit = ["tests/*"]
 [dependency-groups]
 dev = [
     "coverage>=7.6.10",
+    "evidently>=0.4.36",
+    "jupyter-contrib-nbextensions>=0.7.0",
+    "pip>=24.3.1",
     "pre-commit>=4.0.1",
     "pytest>=8.3.4",
     "ruff>=0.9.2",
