--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ dependencies = [
     "hydra-core>=1.3.2",
     "invoke>=2.2.0",
     "numpy>=2.2.1",
+    "prometheus-client",
     "python-dotenv>=1.0.1",
     "pytorch-lightning>=2.5.0.post0",
     "torch>=2.5.1",
