--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ dependencies = [
     "httpx>=0.28.1",
     "hydra-core>=1.3.2",
     "invoke>=2.2.0",
+    "locust>=2.32.6",
     "matplotlib>=3.10.0",
     "numpy>=2.2.1",
     "pandas>=2.2.3",
