--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ dependencies = [
     "matplotlib>=3.10.0",
     "numpy>=2.2.1",
     "pandas>=2.2.3",
+    "protobuf>=5.29.3",
     "pytest-cov>=6.0.0",
     "python-dotenv>=1.0.1",
     "pytorch-lightning>=2.5.0.post0",
